--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,6 +38,21 @@ h6 {
       background: black;
 
       .box-by-dan {
+        background: yellow;
+        border: rgb(88, 79, 79);
+        color: rgb(54, 48, 48);
+        border-radius: 100px;
+        width: 200px;
+        height: 200px;
+        box-shadow: 0px 0px 20px yellow;
+        position: absolute;
+      }
+    }
+
+    &.neon {
+      background: black;
+
+      .box-by-dan {
         box-shadow: 0px 0px 20px white;
         border: 1px solid rgb(208, 184, 216);
         background: rgb(73, 56, 75);
