--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -115,6 +115,11 @@ h6 {
     @include transition(all 1.0s ease);
   }
 
+  &.fire-words {
+    color: red;
+    text-shadow: 1px -2px 3px yellow;
+  }
+
   &.expand {
     position: relative;
     width: 280px;
@@ -128,11 +133,11 @@ h6 {
 
   &.light-it-up {
     box-shadow: 0px 0px 70px yellow;
-background: rgb(238, 238, 93);
-color: rgb(42, 185, 94);
-border: 2px solid rgb(153, 221, 150);
-text-shadow: 5px 5px 10px white;
-  }
+    background: rgb(238, 238, 93);
+    color: rgb(42, 185, 94);
+    border: 2px solid rgb(153, 221, 150);
+    text-shadow: 5px 5px 10px white;
+    }
 
   span {
     display: block;
@@ -210,6 +215,7 @@ text-shadow: 5px 5px 10px white;
 .row4 {
   width: 980px;
   height: 450px;
+  padding-left: 15px;
   @include transition(all 1.0s ease);
 }
 
