--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -120,6 +120,11 @@ h6 {
     text-shadow: 1px -2px 3px yellow;
   }
 
+  &.fire-words2 {
+    color: red;
+    text-shadow: 1px -2px 5px yellow;
+  }
+
   &.expand {
     position: relative;
     width: 280px;
@@ -138,6 +143,14 @@ h6 {
     border: 2px solid rgb(153, 221, 150);
     text-shadow: 5px 5px 10px white;
     }
+
+  &.blue-steel {
+    box-shadow: 0px 0px 13px rgb(0, 41, 255);
+    background: #CED0E0;
+    color: #2A2AB9;
+    border: 1px solid #393FC9;
+    text-shadow: 0px 2px 5px rgb(91, 101, 175);
+   }
 
   span {
     display: block;
